<resources>
    <string name="app_name">AiLaTrieuPhu</string>
    <string name="password_retrieval">Lấy lại mật khẩu</string>
    <string name="credit_number">5.000</string>
    <string name="buy_credit">Mua Credit</string>
    <string name="number_5000">5.000</string>
    <string name="email">Email</string>
    <string name="number_450">450$</string>
    <string name="username_player">thời gian</string>
    <string name="number_3000">3.000</string>
    <string name="number_290">290$</string>
    <string name="score_number">290 điểm</string>
    <string name="number_1000">1.000</string>
    <string name="number_95">95$</string>
    <string name="number_500">500</string>
    <string name="number_50">50$</string>
    <string name="number_score_user_player">Điểm: 0</string>
    <string name="title_question">Câu hỏi</string>
    <string name="number_question_exists">1</string>
    <string name="contain_question">Đại ngu là quốc hiệu của triều đại nào...?</string>
    <string name="answer_people_family">Câu trả lời từ người thân</string>
    <string name="answer_final_people_family">B</string>
    <string name="thanks_you">Xin cám ơn</string>
    <string name="number_credit">100</string>
    <string name="number_question">1</string>
    <string name="number_question_field">1</string>
    <string name="answer_a">A. Triều Ngô</string>
    <string name="answer_b">B. Triều Hồ</string>
    <string name="answer_c">C. Triều Lý</string>
    <string name="answer_d">D. Triều Nguyễn</string>
    <string name="count_time">10s</string>
    <string name="title_end_game">Lượt chơi đã kết thúc!</string>
    <string name="congratulations">Xin chúc mừng bạn đã đạt được:</string>
    <string name="number_score">10000 điểm</string>
    <string name="add_one_more_300">Thêm một lượt chơi 300</string>
    <string name="end_game">Kết thúc.</string>
    <string name="hint_user_login">Tên đăng nhập</string>
    <string name="history">Lịch sử chơi</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="sign_up">Đăng Ký</string>
    <string name="login_facebook">Đăng nhập với Facebook</string>
    <string name="login_google">Đăng nhập với Google</string>
    <string name="manage_account">Quản lý tài khoản</string>
    <string name="new_game">Trò chơi mới</string>
    <string name="rank">Bảng xếp hạng</string>
    <string name="change_avatar">Đổi hình đại diện</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="update">Cập nhật</string>
    <string name="choose_field">Chọn lĩnh vực</string>
    <string name="science_technology">Khoa học kỹ thuật</string>
    <string name="cultural_society_art">Văn hóa - Xã hội - nghệ thuật</string>
    <string name="history_geography">Lịch sử</string>
    <string name="sport">Thể thao</string>
    <string name="support_audience">Trợ giúp của khán giả</string>
    <string name="bang_xep_hang">Bảng xếp hạng</string>
    <string name="btnRank">1</string>
    <string name="diem_cao_nhat">diem_cao_nhat</string>
    <string name="credit">credit</string>
    <string name="thoi_gian">thoi_gian</string>
    <string name="ten_dang_nhap">ten_dang_nhap</string>
    <string name="_200_diem">2.000 Điểm</string>
    <string name="so_cau">Số câu: 10</string>
    <string name="history_name">ngocle</string>
    <string name="name">123123</string>
    <string name="todo">TODO</string>
    <string name="b">B</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="titleFiftyPercentSupport">Title</string>
</resources>

