<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:gravity="center"

    android:background="@drawable/custom_dialog"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/txtTitleDialog"
        android:textColor="#042CA2"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleFiftyPercentSupport">
    </TextView>
    <TextView
        android:id="@+id/txtContentDialog"
        android:text="@string/b"
        android:textColor="#0DAC6A"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <Button
        android:id="@+id/btnOk"
        android:background="@drawable/custom_button_dialog"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="#FFDD00"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/thanks_you">
    </Button>

</LinearLayout>