<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_dialog"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitleDialogFiftyPercentSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/titleFiftyPercentSupport"
        android:textColor="#FF5722"
        android:textSize="20sp"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:id="@+id/txtContentDialogFiftyPercentSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/b"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        android:textStyle="bold">
    </TextView>

    <LinearLayout
        android:id="@+id/FormActionDialogFiftyPercentSupport"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnOkFiftyPercentSupport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/animation_button_blue"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            tools:ignore="ButtonOrder,ButtonStyle">
        </Button>
        <Button
            android:id="@+id/btnCancelFiftyPercentSupport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/animation_button_yellow"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            tools:ignore="ButtonOrder,ButtonStyle">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/formBottomDialogFiftyPercentSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
</LinearLayout>