<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0">

    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineMid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4">

    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineMid1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8">

    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0">

    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineStart"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineEnd"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9">
    </androidx.constraintlayout.widget.Guideline>

    <LinearLayout
        android:id="@+id/FormAvatarLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="10"
        app:layout_constraintBottom_toTopOf="@id/lineMid"
        app:layout_constraintEnd_toStartOf="@id/lineEnd"
        app:layout_constraintStart_toEndOf="@id/lineStart"
        app:layout_constraintTop_toBottomOf="@id/lineTop">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:contentDescription="@string/todo"
            android:padding="50dp"
            android:src="@drawable/admin_two"
            app:layout_constraintBottom_toTopOf="@id/lineMid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lineTop">
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/FormMainLoginAccount"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="10"
        app:layout_constraintBottom_toTopOf="@id/lineMid1"
        app:layout_constraintEnd_toStartOf="@id/lineEnd"
        app:layout_constraintStart_toEndOf="@id/lineStart"
        app:layout_constraintTop_toBottomOf="@id/lineMid">

        <EditText
            android:id="@+id/txtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:background="@drawable/radius_user_edit_text"
            android:hint="@string/hint_user_login"
            android:inputType="textCapSentences"
            android:text="123123">
        </EditText>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:background="@drawable/radius_user_edit_text"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:lines="1"
            android:text="123123">
        </EditText>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="2"
            android:background="@drawable/animation_button_blue"
            android:text="@string/login"
            android:textAllCaps="false"
            tools:targetApi="o">
        </Button>

        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="2"
            android:background="@drawable/animation_button_green"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            tools:targetApi="o">
        </Button>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="2"
            android:background="@drawable/animation_button_red"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            tools:targetApi="o">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintBottom_toTopOf="@id/lineBottom"
        app:layout_constraintEnd_toEndOf="@id/lineEnd"
        app:layout_constraintStart_toStartOf="@id/lineStart"
        app:layout_constraintTop_toBottomOf="@+id/lineMid1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_facebook"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/login_facebook"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_google_plus"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/login_google"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"></TextView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>