<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.SignUpActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1">

    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7">

    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1">

    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9">

    </androidx.constraintlayout.widget.Guideline>

    <LinearLayout
        android:id="@+id/FormSignUp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="@id/bottomSignUp"
        app:layout_constraintEnd_toStartOf="@id/rightSignUp"
        app:layout_constraintStart_toStartOf="@id/leftSignUp"
        app:layout_constraintTop_toBottomOf="@id/topSignUp">

        <ImageView
            android:id="@+id/imgSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:clickable="true"
            android:focusable="true"
            android:padding="50dp"
            android:src="@drawable/ic_user_player"
            android:contentDescription="TODO">
        </ImageView>

        <EditText
            android:id="@+id/edtUserNameSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/radius_user_edit_text"
            android:hint="@string/hint_user_login"
            android:inputType="textCapSentences"
            android:padding="5dp"
            android:autofillHints="">
        </EditText>

        <EditText
            android:id="@+id/edtEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/radius_user_edit_text"
            android:hint="@string/email"
            android:lines="1"
            android:inputType="textCapSentences"
            android:padding="5dp"
            tools:ignore="TextFields"
            android:autofillHints="">
        </EditText>

        <EditText
            android:id="@+id/edtPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/radius_user_edit_text"
            android:hint="@string/hint_password"
            android:lines="1"
            android:inputType="textPassword"
            android:padding="5dp"
            android:autofillHints="">
        </EditText>

        <EditText
            android:id="@+id/edtConfirmPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/radius_user_edit_text"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:lines="1"
            android:padding="5dp"
            android:autofillHints="">
        </EditText>

        <Button
            android:id="@+id/btnSignUpAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/animation_button_blue"
            android:text="@string/sign_up"
            android:inputType="textCapSentences"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            tools:ignore="TextViewEdits">
        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>