<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    android:background="#A2A2A2"
    android:layout_margin="2dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Controller.WrongActivity">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/lineMidItemHistoryPlayer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5">

        </androidx.constraintlayout.widget.Guideline>

        <LinearLayout
            android:id="@+id/FormNumberQuestionHistoryPlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#00FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/lineMidItemHistoryPlayer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/txtHistoryTimePlayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/username_player"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/time_color_brown"
                android:textStyle="italic">

            </TextView>

            <TextView
                android:id="@+id/txtNumberQuestionHistoryPlayer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/so_cau"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/number_question_color_brown_pale"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>

        <TextView
            android:id="@+id/txtScoreHistoryPlayer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/_200_diem"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/number_question_color_brown_pale"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/lineMidItemHistoryPlayer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

