<LinearLayout android:id="@+id/FormStatusQuestion"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="10"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/txtUserNameShowQuestion"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginEnd="5dp"
        android:layout_weight="4"
        android:background="@drawable/radius_button_sign_up_blue_2"
        android:gravity="center"
        android:text="@string/history_name"
        android:textSize="23sp">
    </TextView>
    <LinearLayout
        android:layout_weight="3"
        android:background="@drawable/animation_button_white"
        android:layout_marginEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/imgHeartShowQuestion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@drawable/animation_button_white"
            android:src="@drawable/ic_heart_available"
            android:contentDescription="@string/todo">
        </ImageButton>
        <ImageButton
            android:id="@+id/imgHeartShowQuestion2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@drawable/animation_button_white"
            android:src="@drawable/ic_heart_available"
            android:contentDescription="@string/todo">
        </ImageButton>
        <ImageButton
            android:id="@+id/imgHeartShowQuestion3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@drawable/animation_button_white"
            android:src="@drawable/ic_heart_available"
            android:contentDescription="@string/todo">
        </ImageButton>
        <ImageButton
            android:id="@+id/imgHeartShowQuestion4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@drawable/animation_button_white"
            android:src="@drawable/ic_heart_available"
            android:contentDescription="@string/todo">
        </ImageButton>
        <ImageButton
            android:id="@+id/imgHeartShowQuestion5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:background="@drawable/animation_button_white"
            android:src="@drawable/ic_heart_available"
            android:contentDescription="@string/todo">
        </ImageButton>
    </LinearLayout>

    <Button
        android:id="@+id/btnScoreShowQuestion"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:background="@drawable/radius_button_yellow"
        android:text="@string/credit_number"
        android:textColor="#FFFF"
        android:textColorHighlight="@drawable/animation_button_blue"
        android:textSize="23sp">
    </Button>

    <ImageButton
        android:id="@+id/btnCreditShowQuestion"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_weight="1.5"
        android:background="@drawable/radius_button_yellow"
        android:src="@drawable/ic_diamond"
        android:contentDescription="@string/todo">
    </ImageButton>
</LinearLayout>